--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -774,126 +774,126 @@ repositories:
       url: https://github.com/ros2/example_interfaces.git
       version: master
     status: maintained
-  #  examples_rclcpp_minimal_client:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclcpp_minimal_composition:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclcpp_minimal_publisher:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclcpp_minimal_service:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclcpp_minimal_subscriber:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclcpp_minimal_timer:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclpy_minimal_client:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclpy_minimal_publisher:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclpy_minimal_service:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
-  #  examples_rclpy_minimal_subscriber:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/examples-release.git
-  #      version: 0.0.2-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/examples.git
-  #      version: release-beta2
-  #    status: maintained
+  examples_rclcpp_minimal_client:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclcpp_minimal_composition:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclcpp_minimal_publisher:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclcpp_minimal_service:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclcpp_minimal_subscriber:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclcpp_minimal_timer:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclpy_minimal_client:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclpy_minimal_publisher:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclpy_minimal_service:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
+  examples_rclpy_minimal_subscriber:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
   fastcdr:
     release:
       tags:
