--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1624,18 +1624,18 @@ repositories:
       url: https://github.com/ros2/rosidl.git
       version: master
     status: maintained
-  #  rttest:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/realtime_support-release.git
-  #      version: 0.0.1-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/realtime_support.git
-  #      version: release-beta2
-  #    status: maintained
+  rttest:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/realtime_support-release.git
+      version: 0.0.1-3
+    source:
+      type: git
+      url: https://github.com/ros2/realtime_support.git
+      version: master
+    status: maintained
   sensor_msgs:
     release:
       tags:
@@ -1852,18 +1852,18 @@ repositories:
   #      url: https://github.com/ros2/tlsf.git
   #      version: release-beta2
   #    status: maintained
-  #  tlsf_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/realtime_support-release.git
-  #      version: 0.0.1-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/realtime_support.git
-  #      version: release-beta2
-  #    status: maintained
+  tlsf_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/realtime_support-release.git
+      version: 0.0.1-3
+    source:
+      type: git
+      url: https://github.com/ros2/realtime_support.git
+      version: master
+    status: maintained
   #  topic_monitor:
   #    release:
   #      tags:
