--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1840,18 +1840,18 @@ repositories:
       url: https://github.com/ros2/tinyxml_vendor.git
       version: master
     status: maintained
-  #  tlsf:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/tlsf-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/tlsf.git
-  #      version: release-beta2
-  #    status: maintained
+  tlsf:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/tlsf-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/tlsf.git
+      version: master
+    status: maintained
   tlsf_cpp:
     release:
       tags:
