--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1984,18 +1984,18 @@ repositories:
   #      url: https://github.com/ros2/urdfdom.git
   #      version: release-beta2
   #    status: maintained
-  #  urdfdom_headers:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/urdfdom_headers-release.git
-  #      version: 1.0.0-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/urdfdom_headers.git
-  #      version: release-beta2
-  #    status: maintained
+  urdfdom_headers:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/urdfdom_headers-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/ros2/urdfdom_headers.git
+      version: master
+    status: maintained
   visualization_msgs:
     release:
       tags:
