--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1972,18 +1972,18 @@ repositories:
   #      url: https://github.com/ros2/robot_model.git
   #      version: release-beta2
   #    status: maintained
-  #  urdfdom:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/urdfdom-release.git
-  #      version: 0.3.0-5
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/urdfdom.git
-  #      version: release-beta2
-  #    status: maintained
+  urdfdom:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/urdfdom-release.git
+      version: 0.3.0-5
+    source:
+      type: git
+      url: https://github.com/ros2/urdfdom.git
+      version: ros2
+    status: maintained
   urdfdom_headers:
     release:
       tags:
