--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1014,18 +1014,18 @@ repositories:
   #      url: https://github.com/ros2/joystick_drivers.git
   #      version: release-beta2
   #    status: maintained
-  #  kdl_parser:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/robot_model-release.git
-  #      version: 1.12.7-5
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/robot_model.git
-  #      version: release-beta2
-  #    status: maintained
+  kdl_parser:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/robot_model-release.git
+      version: 1.12.7-5
+    source:
+      type: git
+      url: https://github.com/ros2/robot_model.git
+      version: ros2
+    status: maintained
   launch:
     release:
       tags:
@@ -1960,18 +1960,18 @@ repositories:
       url: https://github.com/ament/uncrustify.git
       version: master
     status: maintained
-  #  urdf:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/robot_model-release.git
-  #      version: 1.12.7-5
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/robot_model.git
-  #      version: release-beta2
-  #    status: maintained
+  urdf:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/robot_model-release.git
+      version: 1.12.7-5
+    source:
+      type: git
+      url: https://github.com/ros2/robot_model.git
+      version: ros2
+    status: maintained
   urdfdom:
     release:
       tags:
