--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1744,66 +1744,66 @@ repositories:
       url: https://github.com/ros2/rcl_interfaces.git
       version: nuclearsandwich-patch-1
     status: maintained
-  #  tf2:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/geometry2-release.git
-  #      version: 0.5.15-6
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/geometry2.git
-  #      version: release-beta2
-  #    status: maintained
-  #  tf2_eigen:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/geometry2-release.git
-  #      version: 0.5.15-6
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/geometry2.git
-  #      version: release-beta2
-  #    status: maintained
-  #  tf2_geometry_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/geometry2-release.git
-  #      version: 0.5.15-6
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/geometry2.git
-  #      version: release-beta2
-  #    status: maintained
-  #  tf2_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/geometry2-release.git
-  #      version: 0.5.15-6
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/geometry2.git
-  #      version: release-beta2
-  #    status: maintained
-  #  tf2_ros:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/geometry2-release.git
-  #      version: 0.5.15-6
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/geometry2.git
-  #      version: release-beta2
-  #    status: maintained
+  tf2:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/geometry2-release.git
+      version: 0.5.15-6
+    source:
+      type: git
+      url: https://github.com/ros2/geometry2.git
+      version: ros2
+    status: maintained
+  tf2_eigen:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/geometry2-release.git
+      version: 0.5.15-6
+    source:
+      type: git
+      url: https://github.com/ros2/geometry2.git
+      version: ros2
+    status: maintained
+  tf2_geometry_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/geometry2-release.git
+      version: 0.5.15-6
+    source:
+      type: git
+      url: https://github.com/ros2/geometry2.git
+      version: ros2
+    status: maintained
+  tf2_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/geometry2-release.git
+      version: 0.5.15-6
+    source:
+      type: git
+      url: https://github.com/ros2/geometry2.git
+      version: ros2
+    status: maintained
+  tf2_ros:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/geometry2-release.git
+      version: 0.5.15-6
+    source:
+      type: git
+      url: https://github.com/ros2/geometry2.git
+      version: ros2
+    status: maintained
   rosidl_typesupport_opensplice_c:
     release:
       tags:
