--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1324,18 +1324,18 @@ repositories:
       type: git
       url: https://github.com/ros2/rmw.git
       version: master
-  #  robot_state_publisher:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/robot_state_publisher-release.git
-  #      version: 1.13.4-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/robot_state_publisher.git
-  #      version: release-beta2
-  #    status: maintained
+  robot_state_publisher:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/robot_state_publisher-release.git
+      version: 1.13.4-3
+    source:
+      type: git
+      url: https://github.com/ros2/robot_state_publisher.git
+      version: ros2
+    status: maintained
   #  ros1_bridge:
   #    release:
   #      tags:
