--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -18,18 +18,18 @@ repositories:
       url: https://github.com/ros2/common_interfaces.git
       version: master
     status: maintained
-  #  amcl:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/navigation-release.git
-  #      version: 1.14.0-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/navigation.git
-  #      version: release-beta2
-  #    status: maintained
+  amcl:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/navigation-release.git
+      version: 1.14.0-3
+    source:
+      type: git
+      url: https://github.com/ros2/navigation.git
+      version: ros2
+    status: maintained
   ament_clang_format:
     release:
       tags:
@@ -1074,18 +1074,18 @@ repositories:
       url: https://github.com/ros2/rcl_interfaces.git
       version: nuclearsandwich-patch-1
     status: maintained
-  #  map_server:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/navigation-release.git
-  #      version: 1.14.0-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/navigation.git
-  #      version: release-beta2
-  #    status: maintained
+  map_server:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/navigation-release.git
+      version: 1.14.0-3
+    source:
+      type: git
+      url: https://github.com/ros2/navigation.git
+      version: ros2
+    status: maintained
   nav_msgs:
     release:
       tags:
