--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -642,18 +642,18 @@ repositories:
       url: https://github.com/ros/class_loader.git
       version: master
     status: maintained
-  #  composition:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  composition:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   console_bridge:
     release:
       tags:
@@ -666,30 +666,30 @@ repositories:
       url: https://github.com/ros2/console_bridge.git
       version: master
     status: maintained
-  #  demo_nodes_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
-  #  demo_nodes_py:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  demo_nodes_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
+  demo_nodes_py:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   #  depth_to_pointcloud:
   #    release:
   #      tags:
@@ -726,42 +726,42 @@ repositories:
       url: https://github.com/ros2/common_interfaces.git
       version: master
     status: maintained
-  #  dummy_map_server:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
-  #  dummy_robot_bringup:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
-  #  dummy_sensors:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  dummy_map_server:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
+  dummy_robot_bringup:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
+  dummy_sensors:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   example_interfaces:
     release:
       tags:
@@ -978,30 +978,30 @@ repositories:
   #      url: https://github.com/ros2/vision_opencv.git
   #      version: release-beta2
   #    status: maintained
-  #  image_tools:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
-  #  intra_process_demo:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  image_tools:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
+  intra_process_demo:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   #  joy:
   #    release:
   #      tags:
@@ -1050,18 +1050,18 @@ repositories:
       url: https://github.com/ros2/launch.git
       version: master
     status: maintained
-  #  lifecycle:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  lifecycle:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   lifecycle_msgs:
     release:
       tags:
@@ -1146,30 +1146,30 @@ repositories:
   #      url: https://github.com/ros2/pcl_conversions.git
   #      version: release-beta2
   #    status: maintained
-  #  pendulum_control:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
-  #  pendulum_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  pendulum_control:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
+  pendulum_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   poco_vendor:
     release:
       tags:
@@ -1864,18 +1864,18 @@ repositories:
       url: https://github.com/ros2/realtime_support.git
       version: master
     status: maintained
-  #  topic_monitor:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/demos-release.git
-  #      version: 0.0.2-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/demos.git
-  #      version: release-beta2
-  #    status: maintained
+  topic_monitor:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: release-beta2
+    status: maintained
   trajectory_msgs:
     release:
       tags:
