--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1660,18 +1660,18 @@ repositories:
       url: https://github.com/ros2/common_interfaces.git
       version: release-beta2
     status: maintained
-  #  sros2:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/sros2-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/sros2.git
-  #      version: release-beta2
-  #    status: maintained
+  sros2:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/sros2-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/sros2.git
+      version: master
+    status: maintained
   std_msgs:
     release:
       tags:
