--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1336,18 +1336,18 @@ repositories:
       url: https://github.com/ros2/robot_state_publisher.git
       version: ros2
     status: maintained
-  #  ros1_bridge:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros1_bridge-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros1_bridge.git
-  #      version: release-beta2
-  #    status: maintained
+  ros1_bridge:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros1_bridge-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros1_bridge.git
+      version: master
+    status: maintained
   ros2cli:
     release:
       tags:
