--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -558,18 +558,18 @@ repositories:
       url: https://github.com/ament/ament_lint.git
       version: master
     status: maintained
-  #  astra_camera:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros_astra_camera-release.git
-  #      version: 0.2.0-7
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros_astra_camera.git
-  #      version: release-beta2
-  #    status: maintained
+  astra_camera:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros_astra_camera-release.git
+      version: 0.2.0-7
+    source:
+      type: git
+      url: https://github.com/ros2/ros_astra_camera.git
+      version: ros2
+    status: maintained
   builtin_interfaces:
     release:
       tags:
