Adding Advanced_Navigation_driver to documentation index for distro

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -11,6 +11,11 @@ release_platforms:
   - xenial
   - zesty
 repositories:
+  Advanced_Navigation_driver:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/Advanced_Navigation_driver.git
+      version: master
   ackermann_msgs:
     doc:
       type: git
