Rev class_loader.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -582,18 +582,18 @@ repositories:
       url: https://github.com/ros2/common_interfaces.git
       version: master
     status: maintained
-  #  cartographer:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/cartographer-release.git
-  #      version: 0.1.0-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/cartographer.git
-  #      version: release-beta2
-  #    status: maintained
+  cartographer:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/cartographer-release.git
+      version: 0.1.0-3
+    source:
+      type: git
+      url: https://github.com/ros2/cartographer.git
+      version: ros2
+    status: maintained
   #  cartographer_ros:
   #    release:
   #      tags:
@@ -624,7 +624,7 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/class_loader-release.git
-      version: 1.0.0-8
+      version: 1.0.0-9
     source:
       type: git
       url: https://github.com/ros/class_loader.git
