--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1122,18 +1122,18 @@ repositories:
       url: https://github.com/osrf/osrf_pycommon.git
       version: master
     status: maintained
-  #  pcl_conversions:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/pcl_conversions-release.git
-  #      version: 0.2.1-1
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/pcl_conversions.git
-  #      version: release-beta2
-  #    status: maintained
+  pcl_conversions:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/pcl_conversions-release.git
+      version: 0.2.1-1
+    source:
+      type: git
+      url: https://github.com/ros2/pcl_conversions.git
+      version: ros2
+    status: maintained
   pendulum_control:
     release:
       tags:
