--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -954,18 +954,18 @@ repositories:
       url: https://github.com/ament/googletest.git
       version: ros2
     status: maintained
-  #  image_geometry:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/vision_opencv-release.git
-  #      version: 1.12.4-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/vision_opencv.git
-  #      version: release-beta2
-  #    status: maintained
+  image_geometry:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/vision_opencv-release.git
+      version: 1.12.4-2
+    source:
+      type: git
+      url: https://github.com/ros2/vision_opencv.git
+      version: ros2
+    status: maintained
   image_tools:
     release:
       tags:
