--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -690,18 +690,18 @@ repositories:
   #      url: https://github.com/ros2/turtlebot2_demo.git
   #      version: release-beta2
   #    status: maintained
-  #  depthimage_to_laserscan:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/depthimage_to_laserscan-release.git
-  #      version: 1.0.7-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/depthimage_to_laserscan.git
-  #      version: release-beta2
-  #    status: maintained
+  depthimage_to_laserscan:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/depthimage_to_laserscan-release.git
+      version: 1.0.7-3
+    source:
+      type: git
+      url: https://github.com/ros2/depthimage_to_laserscan.git
+      version: ros2
+    status: maintained
   diagnostic_msgs:
     release:
       tags:
