--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -990,18 +990,18 @@ repositories:
       url: https://github.com/ros2/demos.git
       version: release-beta2
     status: maintained
-  #  joy:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/joy-release.git
-  #      version: 1.11.0-2
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/joystick_drivers.git
-  #      version: release-beta2
-  #    status: maintained
+  joy:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/joy-release.git
+      version: 1.11.0-2
+    source:
+      type: git
+      url: https://github.com/ros2/joystick_drivers.git
+      version: ros2
+    status: maintained
   kdl_parser:
     release:
       tags:
