--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1696,30 +1696,30 @@ repositories:
       url: https://github.com/ros2/common_interfaces.git
       version: master
     status: maintained
-  #  teleop_twist_joy:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/teleop_twist_joy-release.git
-  #      version: 0.1.2-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/teleop_twist_joy.git
-  #      version: release-beta2
-  #    status: maintained
-  #  teleop_twist_keyboard:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/teleop_twist_keyboard-release.git
-  #      version: 0.6.0-3
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/teleop_twist_keyboard.git
-  #      version: release-beta2
-  #    status: maintained
+  teleop_twist_joy:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/teleop_twist_joy-release.git
+      version: 0.1.2-3
+    source:
+      type: git
+      url: https://github.com/ros2/teleop_twist_joy.git
+      version: ros2
+    status: maintained
+  teleop_twist_keyboard:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/teleop_twist_keyboard-release.git
+      version: 0.6.0-3
+    source:
+      type: git
+      url: https://github.com/ros2/teleop_twist_keyboard.git
+      version: ros2
+    status: maintained
   test_msgs:
     release:
       tags:
