--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -678,18 +678,18 @@ repositories:
       url: https://github.com/ros2/demos.git
       version: release-beta2
     status: maintained
-  #  depth_to_pointcloud:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/turtlebot2_demo.git
-  #      version: release-beta2
-  #    status: maintained
+  depth_to_pointcloud:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/turtlebot2_demo.git
+      version: master
+    status: maintained
   depthimage_to_laserscan:
     release:
       tags:
@@ -1874,68 +1874,68 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/common_interfaces.git
-      version: release-beta2
+      version: master
     status: maintained
-  #  turtlebot2_amcl:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/turtlebot2_demo.git
-  #      version: release-beta2
-  #    status: maintained
-  #  turtlebot2_cartographer:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/turtlebot2_demo.git
-  #      version: release-beta2
-  #    status: maintained
-  #  turtlebot2_drivers:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/turtlebot2_demo.git
-  #      version: release-beta2
-  #    status: maintained
-  #  turtlebot2_follower:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/turtlebot2_demo.git
-  #      version: release-beta2
-  #    status: maintained
-  #  turtlebot2_teleop:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/turtlebot2_demo.git
-  #      version: release-beta2
-  #    status: maintained
+  turtlebot2_amcl:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/turtlebot2_demo.git
+      version: master
+    status: maintained
+  turtlebot2_cartographer:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/turtlebot2_demo.git
+      version: master
+    status: maintained
+  turtlebot2_drivers:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/turtlebot2_demo.git
+      version: master
+    status: maintained
+  turtlebot2_follower:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/turtlebot2_demo.git
+      version: master
+    status: maintained
+  turtlebot2_teleop:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/turtlebot2_demo.git
+      version: master
+    status: maintained
   uncrustify:
     release:
       tags:
